--- a/package.json
+++ b/package.json
@@ -13,18 +13,10 @@
         "tailwindcss": "^3.4.1",
         "autoprefixer": "^10.0.0",
         "tailwind-merge": "^2.4.0",
-        "tailwindcss-animate": "^1.0.7",
-        "react-router-dom": "^6.22.3",
-        "framer-motion": "^11.2.10",
-        "@supabase/supabase-js": "^2.43.4",
-        "lucide-react": "^0.395.0"
+        "tailwindcss-animate": "^1.0.7"
       },
       "main": "/index.js",
-      "devDependencies": {
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0"
-      },
+      "devDependencies": {},
       "browserslist": {
         "production": [
           ">0.2%",
