--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
         "eject": "react-scripts eject"
       },
       "dependencies": {
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "react-scripts": "^5.0.0",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
-        "autoprefixer": "^10.0.0",
-        "tailwind-merge": "^2.4.0",
-        "tailwindcss-animate": "^1.0.7"
+            "@supabase/supabase-js": "^2.56.1",
+            "autoprefixer": "^10.0.0",
+            "framer-motion": "^12.23.12",
+            "lucide-react": "^0.542.0",
+            "postcss": "^8",
+            "react": "^18.0.0",
+            "react-dom": "^18.0.0",
+            "react-router-dom": "^6.0.0",
+            "react-scripts": "^5.0.0",
+            "tailwind-merge": "^2.4.0",
+            "tailwindcss": "^3.4.1",
+            "tailwindcss-animate": "^1.0.7"
       },
       "main": "/index.js",
-      "devDependencies": {},
+      "devDependencies": {
+            "@testing-library/jest-dom": "^6.0.0",
+            "@testing-library/react": "^14.0.0"
+      },
       "browserslist": {
         "production": [
           ">0.2%",
